iniciao accion organizacion

--- a/.env.plantilla
+++ b/.env.plantilla
@@ -31,7 +31,7 @@ if (test "$RUTA_RELATIVA" = "") then {
   export RUTA_RELATIVA=/iap/si/
 } fi;
 if (test "$DIRAP" = "") then {
-  export DIRAP='/var/www/htdocs/si_iap'
+  export DIRAP="/var/www/htdocs/si_iap"
 } fi;
 if (test "$RAILS_ENV" = "") then {
   export RAILS_ENV=development
