--- a/config/database.yml
+++ b/config/database.yml
@@ -1,19 +1,23 @@
+
 default: &default
   adapter: postgresql
   encoding: unicode
   pool: 5
+  username: <%= ENV.fetch('BD_USUARIO', 'sipdes') %>
+  password: <%= ENV.fetch('BD_CLAVE') %>
   host: /var/www/var/run/postgresql
-  username: <%= ENV['BD_USUARIO'] || 'sipdes' %>
-  password: <%= ENV['BD_CLAVE'] %>
 
 development:
   <<: *default
-  database: <%= ENV['BD_DES'] || 'siiap_des' %>
+  database: <%= ENV.fetch('BD_DES', 'siiap_des') %>
 
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: <%= ENV['BD_PRUEBA'] || 'siiap_pru' %>
+  database: <%= ENV.fetch('BD_PRUEBA', 'siiap_pru') %>
 
 production:
   <<: *default
-  database: <%= ENV['BD_PRO'] || 'siiap_pro' %>
+  database: <%= ENV.fetch('BD_PRO', 'siiap_pro') %>
