ajusta para usar sip.ruta anexo

--- a/.env.plantilla
+++ b/.env.plantilla
@@ -67,23 +67,22 @@ if (test "$SECRET_KEY_BASE" = "") then {
 } fi;
 
 
+# Configuraciones requeridas por heb412
+
+if (test "$HEB412_RUTA" = "") then {
+  export HEB412_RUTA=/public/heb412
+} fi;
+
 # Configuraciones requeridas por sip
 
 if (test "$SIP_FORMATO_FECHA" = "") then {
   export SIP_FORMATO_FECHA='dd/M/yyyy'
 } fi;
 if (test "$SIP_RUTA_ANEXOS" = "") then {
-  export SIP_RUTA_ANEXOS=${DIRAP}/archivos/anexos
+  export SIP_RUTA_ANEXOS=${HEB412_RUTA}/ANEXOS
 } fi;
 if (test "$SIP_RUTA_VOLCADOS" = "") then {
   export SIP_RUTA_VOLCADOS=${DIRAP}/archivos/bd
-} fi;
-
-
-# Configuraciones requeridas por heb412
-
-if (test "$HEB412_RUTA" = "") then {
-  export HEB412_RUTA=/public/heb412
 } fi;
 
 
