Reorganiza formulario de actividad en pestañas. Closes #18

--- a/.env.plantilla
+++ b/.env.plantilla
@@ -34,7 +34,7 @@ if (test "$RUTA_RELATIVA" = "") then {
   export RUTA_RELATIVA=/iap/si/
 } fi;
 if (test "$DIRAP" = "") then {
-  export DIRAP="/var/www/htdocs/si_iap"
+  export DIRAP="$HOME/comp/rails/si_iap"
 } fi;
 if (test "$RAILS_ENV" = "") then {
   export RAILS_ENV=development
