--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@popperjs/core": "^2.9.3",
     "@rails/ujs": "^6.0.1",
     "@rails/webpacker": "6.0.0-rc.1",
+    "apexcharts": "^3.28.1",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.1.0",
     "bootstrap-datepicker": "^1.9.0",
