--- a/.env.plantilla
+++ b/.env.plantilla
@@ -31,7 +31,7 @@ if (test "$CONFIG_HOSTS" = "") then {
   export CONFIG_HOSTS=192.168.10.1
 } fi;
 if (test "$RUTA_RELATIVA" = "") then {
-  export RUTA_RELATIVA=/iap/si/
+  export RUTA_RELATIVA=/iap/miviap/
 } fi;
 if (test "$DIRAP" = "") then {
   export DIRAP="$HOME/comp/rails/si_iap"
