--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
+    "@hotwired/turbo-rails": "^7.1.1",
     "@popperjs/core": "^2.9.3",
-    "@rails/ujs": "^6.0.1",
+    "@rails/ujs": "^7.0.1",
     "apexcharts": "^3.28.1",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.1.0",
@@ -29,8 +30,7 @@
     "react-table": "^7.6.3",
     "react_ujs": "^2.6.1",
     "serialize-javascript": "^3.1.0",
-    "styled-components": "^5.2.1",
-    "turbolinks": "^5.2.0"
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "dns-packet": "^1.3.4",
