--- a/.env.plantilla
+++ b/.env.plantilla
@@ -50,7 +50,7 @@ if (test "$PUERTODES" = "") then {
   export PUERTODES=3000
 } fi;
 if (test "" = "") then { # Conexión para recarga viva
-  export MAQRECVIVA="192.168.10.1"
+  export MAQRECVIVA=${CONFIG_HOSTS}
 } fi;
 if (test "" = "") then { # Puerto para recarga viva
    export PUERTORECVIVA=4500
