--- a/.env.plantilla
+++ b/.env.plantilla
@@ -89,7 +89,7 @@ if (test "$SIP_RUTA_VOLCADOS" = "") then {
 # Configuraciones requeridas por heb412
 
 if (test "$HEB412_RUTA" = "") then {
-  export HEB412_RUTA=/public/heb412
+  export HEB412_RUTA=${DIRAP}/public/heb412
 } fi;
 
 
