--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ app/javascript/controllers/heb412_gen
 app/javascript/controllers/cor1440_gen
 app/javascript/controllers/sal7711_gen
 app/javascript/controllers/sivel2_gen
+app/javascript/controllers/sip
