--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ app/javascript/controllers/cor1440_gen
 app/javascript/controllers/sal7711_gen
 app/javascript/controllers/sivel2_gen
 app/javascript/controllers/sip
+cobertura-sistema/
+cobertura-unitarias/
